add exists-by-login test